# slimetime

./: .gitignore  LICENSE  Makefile  README.md  make.bat  requirements_dev.txt  setup.cfg  slime.py  slime.spec  slimetime.spec
.github/workflows/: main.yml
slimetime/: cli.py
