[metadata]
name = slimetime
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
description = Demo of a simple installable python GUI
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
version = 0.1.0

[build-system]
requires =
    setuptools>=46
    wheel
    setuptools_scm[toml]>=3.4

[options]
python_requires = >=3.8
packages = find:
install_requires =
    gooey

[options.entry_points]
console_scripts =
    slimetime = slimetime.cli:app
